syntax = "proto3";

package rideBooking;

message RideTime{
  string open = 1;
  string close = 2;
}

enum PassTypeEnum{
  UNKNOWN = 0;
  //  cantidad ilimitada de atracciones del parque
  UNLIMITED =1;
  //  hasta 3 atracciones del parque (hasta tres reservas pendientes o confirmadas)
  THREE = 2;
  // cantidad ilimitada de atracciones del parque para los slots que inicien antes de las 14:00
  HALFDAY = 3;
}


enum ReservationState {
  UNKNOWN_STATE = 0;
  CANCELLED=1;
  PENDING=2;
  CONFIRMED=3;
  RELOCATED=4;
}

enum SimpleStatusResponse {
  OK=0;
  ERROR=1;
}
